feat(rails/example) add one
