# api/app/models/comment.rb
@@ -1,0 +1,8 @@
+class Comment < ApplicationRecord
+  belongs_to :article
+  attribute :commenter, :string
+  attribute :body, :text
+
+  validates :commenter, presence: true, length: { maximum: 255 }
+  validates :body, presence: true
+end
